Fix blog page text alignment.

--- a/style.scss
+++ b/style.scss
@@ -286,6 +286,9 @@ nav {
   .entry {
     text-align: left;
   }
+  .entry.main {
+    text-align: center;
+  }
 }
 
 .wrapper-footer {
